<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/name"
        style="@style/label"
        />


    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/label"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/label"
        android:text="@string/department" />

    <EditText
        android:id="@+id/etDepartment"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="300dp"
        android:gravity="left"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="invisible"
            />

    </LinearLayout>







</LinearLayout>